syntax = "proto3";

service SCSPService {
    rpc Report(ClipBoardMessage) returns (ClipBoardResp);
    rpc Register(RegisterMessage) returns (stream RegisterResp);
    rpc Ping(PingMessage) returns (PingResp);
}

message ClipBoardMessage {
    int64 timestamp = 1;
    bytes  content   = 2;
    string address = 3;
}

message ClipBoardResp {}

message RegisterMessage {
    string address = 1;
}

message RegisterResp {
    bytes payload = 1;
}

message PingMessage {
    string address = 1;
    int64 timestamp = 2;
}

message PingResp {}